## #################################################################
## CMakeLists.txt
## #################################################################

# TODO : add the subdirectories to compile
#add_subdirectory(__)
# OR from cmc-macros
#conditional_add_subdirectory(xxx DEPENDS yyy zzz OPTIONS BUILD_xxx)
